--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-
+    <div id="container">
+        <div id="post">
+            <h1>Este es un blog </h1>
+            <p>Este es un parrafo que se encuentra dentro de nuesto blog</p>
+        </div>
+    </div>
 </body>
 
 </html>
