--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,9 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+
+        </div>
         <div id="post">
             <h1>Este es un blog </h1>
             <p>Este es un parrafo que se encuentra dentro de nuesto blog</p>
