--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-
+            Blog de Richard <span id="tagline"> El mejor blog Tech</span>
         </div>
         <div id="post">
             <h1>Este es un blog </h1>
