--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,10 @@
     <div id="container">
         <div id="post">
             <h1>Este es un blog </h1>
-            <p>Este es un parrafo que se encuentra dentro de nuesto blog</p>
+            <p>Este es un parrafo que se encuentra dentro de nuestro blog</p>
+            <p>
+                Los blogs son una de las mejores herramientas para compartir información
+            </p>
         </div>
     </div>
 </body>
