--- a/blog.html
+++ b/blog.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog de Richard</title>
+    <title>Bienvenidos al Blog </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <h1>Blog de Rich</h1>
     <div id="container">
         <div id="cabecera">
             Blog de Richard <span id="tagline"> El mejor blog Tech</span>
