--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenidos al Blog </title>
+    <title>Bienvenidos al Blog 2.0 </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
