Cabecera y footer terminado

--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,10 @@
                 Los blogs son una de las mejores herramientas para compartir información
             </p>
         </div>
+
+        <div id="footer">
+            Hecho con amor
+        </div>
     </div>
 </body>
 
