--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <h1>Blog de Rich</h1>
     <div id="container">
         <div id="cabecera">
-            <img id="logo" src="img/spidey.jpg" alt=""> <span id="tagline"> HyperBlog</span>
+            <span id="tagline"> HyperBlog</span>
         </div>
         <div id="post">
             <h1>Este es un blog </h1>
