--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
         </div>
         <div id="post">
             <h1>Este es un blog </h1>
-            <p>Este es un parrafo que se encuentra dentro de nuestro blog</p>
+            <p>Este es un párrafo que se encuentra dentro de nuestro blog</p>
             <p>
                 Los blogs son una de las mejores herramientas para compartir información
             </p>
