Se cambian tildes por entidades HTML

--- a/blog.html
+++ b/blog.html
@@ -16,9 +16,9 @@
         </div>
         <div id="post">
             <h1>Este es un blog </h1>
-            <p>Este es un párrafo que se encuentra dentro de nuestro blog</p>
+            <p>Este es un p&aacute;rrafo que se encuentra dentro de nuestro blog</p>
             <p>
-                Los blogs son una de las mejores herramientas para compartir información
+                Los blogs son una de las mejores herramientas para compartir informaci&oacute;n
             </p>
         </div>
 
